Day 36 - python file

--- a/day-36-api-stocks/main.ipynb
+++ b/day-36-api-stocks/main.ipynb
@@ -2,18 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'2022-11-22 17:00:00'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_18740/1570661468.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[1;31m#TODO 2. - Get the day before yesterday's closing stock price\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 32\u001b[1;33m \u001b[0mday_before_yesterday_close\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Time Series (5min)'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mprevious_day_string\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\" 17:00:00\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'4. close'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     33\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     34\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: '2022-11-22 17:00:00'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Get News\n",
+      "The only thing investors have to fear is FOMO itself\n",
+      "While there is nothing new to their complaining about not being able to invest in the complex securities available only to the rich and famous, the bear market has made their lack of access really sting. The S&P 500 SPX, But they aren’t laughing either. Elon …\n",
+      "\n",
+      "The only thing investors have to fear is FOMO itself\n",
+      "While there is nothing new to their complaining about not being able to invest in the complex securities available only to the rich and famous, the bear market has made their lack of access really sting. The S&P 500 SPX, But they aren’t laughing either. Elon …\n",
+      "\n",
+      "Tesla Cybertruck Design Update Spotted In New Or Updated Prototype\n",
+      "A new video of the Tesla Cybertruck has surfaced online, showing some significant changes to its design. Tesla makes the absolute coolest toy for adults. Who else loves the cybertruck? $TSLA pic.twitter.com/cPcggvMktA Tesla updated the status of Cybertruck pr…\n",
+      "\n"
      ]
     }
    ],
@@ -39,13 +44,14 @@
     "}\n",
     "\n",
     "r = requests.get(STOCK_ENDPOINT, params=stock_params)\n",
-    "data = r.json()\n",
+    "data = r.json()['Time Series (Daily)']\n",
     "\n",
+    "data_list = [value for (key, value) in data.items()]\n",
+    "yesterday_close = float(data_list[0]['4. close'])\n",
     "\n",
     "#TODO 2. - Get the day before yesterday's closing stock price\n",
     "\n",
-    "day_before_yesterday_close = float(data['Time Series (5min)'][previous_day_string + \" 17:00:00\"]['4. close'])\n",
-    "\n",
+    "day_before_yesterday_close = float(data_list[1]['4. close'])\n",
     "\n",
     "\n",
     "\n",
@@ -60,45 +66,47 @@
     "#TODO 5. - If TODO4 percentage is greater than 5 then print(\"Get News\").\n",
     "\n",
     "\n",
-    "if perc_diff > .05:\n",
+    "if perc_diff > .000:\n",
     "    print(\"Get News\")\n",
     "\n",
     "#TODO 6. - Instead of printing (\"Get News\"), use the News API to get articles related to the COMPANY_NAME.\n",
     "\n",
-    "url = f'https://newsapi.org/v2/everything?q={STOCK_NAME}&from=2022-10-26&sortBy=publishedAt&apiKey=a792e5fd078848a1bc38bffd200d211f'\n",
+    "    url = f'https://newsapi.org/v2/everything?q={STOCK_NAME}&from=2022-10-26&sortBy=publishedAt&apiKey=a792e5fd078848a1bc38bffd200d211f'\n",
     "\n",
-    "r = requests.get(url)\n",
-    "data = r.json()\n",
+    "    r = requests.get(url)\n",
+    "    data = r.json()\n",
     "\n",
     "\n",
     "\n",
     "#TODO 7. - Use Python slice operator to create a list that contains the first 3 articles. Hint: https://stackoverflow.com/questions/509211/understanding-slice-notation\n",
     "\n",
-    "for article in range(3):\n",
-    "    print(data['articles'][article]['title'])\n",
-    "    print(f\"{data['articles'][article]['description']}\\n\")\n",
-    "\n",
-    "    list_of_articles = [data['articles'][article]['title'] for article in range(3)]\n",
     "\n",
     "    ## STEP 3: Use twilio.com/docs/sms/quickstart/python\n",
     "    #to send a separate message with each article's title and description to your phone number. \n",
     "\n",
     "#TODO 8. - Create a new list of the first 3 article's headline and description using list comprehension.\n",
     "\n",
+    "\n",
+    "    for article in range(3):\n",
+    "        print(data['articles'][article]['title'])\n",
+    "        print(f\"{data['articles'][article]['description']}\\n\")\n",
+    "\n",
+    "        list_of_articles = [f\"{data['articles'][article]['title']}\" for article in range(3)]\n",
+    "\n",
     "#TODO 9. - Send each article as a separate message via Twilio. \n",
     "\n",
     "\n",
     "\n",
     "#Optional TODO: Format the message like this: \n",
-    "\"\"\"\n",
-    "TSLA: 🔺2%\n",
-    "Headline: Were Hedge Funds Right About Piling Into Tesla Inc. (TSLA)?. \n",
-    "Brief: We at Insider Monkey have gone over 821 13F filings that hedge funds and prominent investors are required to file by the SEC The 13F filings show the funds' and investors' portfolio positions as of March 31st, near the height of the coronavirus market crash.\n",
-    "or\n",
-    "\"TSLA: 🔻5%\n",
-    "Headline: Were Hedge Funds Right About Piling Into Tesla Inc. (TSLA)?. \n",
-    "Brief: We at Insider Monkey have gone over 821 13F filings that hedge funds and prominent investors are required to file by the SEC The 13F filings show the funds' and investors' portfolio positions as of March 31st, near the height of the coronavirus market crash.\n",
-    "\"\"\"\n",
+    "# \"\"\"\n",
+    "# TSLA: 🔺2%\n",
+    "# Headline: Were Hedge Funds Right About Piling Into Tesla Inc. (TSLA)?. \n",
+    "# Brief: We at Insider Monkey have gone over 821 13F filings that hedge funds and prominent investors are required to file by the SEC The 13F filings show the funds' and investors' portfolio positions as of March 31st, near the height of the coronavirus market crash.\n",
+    "# or\n",
+    "# \"TSLA: 🔻5%\n",
+    "# Headline: Were Hedge Funds Right About Piling Into Tesla Inc. (TSLA)?. \n",
+    "# Brief: We at Insider Monkey have gone over 821 13F filings that hedge funds and prominent investors are required to file by the SEC The 13F filings show the funds' and investors' portfolio positions as of March 31st, near the height of the coronavirus market crash.\n",
+    "# \"\"\"\n",
     "\n"
    ]
   },
@@ -939,29 +947,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'source': {'id': None, 'name': 'Biztoc.com'},\n",
-       " 'author': 'cleantechnica.com',\n",
-       " 'title': 'Tesla Cybertruck Design Update Spotted In New Or Updated Prototype',\n",
-       " 'description': 'A new video of the Tesla Cybertruck has surfaced online, showing some significant changes to its design. Tesla makes the absolute coolest toy for adults. Who else loves the cybertruck? $TSLA pic.twitter.com/cPcggvMktA Tesla updated the status of Cybertruck pr…',\n",
-       " 'url': 'https://biztoc.com/x/8f6accfd25343ba2',\n",
-       " 'urlToImage': 'https://c.biztoc.com/p/8f6accfd25343ba2/og.webp',\n",
-       " 'publishedAt': '2022-11-26T17:02:04Z',\n",
-       " 'content': 'A new video of the Tesla Cybertruck has surfaced online, showing some significant changes to its design.\\r\\nTesla makes the absolute coolest toy for adults. Who else loves the cybertruck? $TSLA pic.twi… [+976 chars]'}"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "183.2\n",
+      "182.86\n"
+     ]
     }
    ],
    "source": [
-    "data['articles'][0]"
+    "print(day_before_yesterday_close)\n",
+    "print(yesterday_close)"
    ]
   }
  ],
